--- a/index.html
+++ b/index.html
@@ -111,9 +111,74 @@
         </div>
     </section>
 
+    <section id="projects" class="section">
+        <h2 data-aos="fade-down">Featured Projects</h2>
+        <p class="section-subtitle" data-aos="fade-up">Here are some of my notable works</p>
+        <div class="projects-grid">
+            <!-- Mood Music Project -->
+            <div class="project-card" data-aos="fade-up">
+                <div class="project-image">
+                    <video autoplay loop muted playsinline class="project-video">
+                        <source src="images/projects/MOOD.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+                <div class="project-content">
+                    <div class="project-header">
+                        <h3>Mood Music</h3>
+                    </div>
+                    <p>A Spotify-integrated web application that generates playlists based on your mood. Features include playlist creation, song previews, and seamless Spotify authentication.</p>
+                    <div class="project-tech">
+                        <span class="tech-tag">HTML5</span>
+                        <span class="tech-tag">CSS3</span>
+                        <span class="tech-tag">JavaScript</span>
+                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">Flask</span>
+                        <span class="tech-tag">Spotify API</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://github.com/SaugatBhujel/mood-music-app" class="project-btn" target="_blank">
+                            <i class="fab fa-github"></i> View Code
+                        </a>
+                        <a href="https://mood-music-app-uwtu.onrender.com" class="project-btn" target="_blank">
+                            <i class="fas fa-external-link-alt"></i> Live Demo
+                        </a>
+                    </div>
+                </div>
+            </div>
+            
+            <!-- VaultBooks Project -->
+            <div class="project-card" data-aos="fade-up">
+                <div class="project-image">
+                    <img src="images/projects/vaultbooks-logo.png" alt="VaultBooks - Financial Management System" class="project-img" loading="lazy">
+                </div>
+                <div class="project-content">
+                    <div class="project-header">
+                        <h3>VaultBooks</h3>
+                    </div>
+                    <p>A comprehensive financial management system built with Django. Features include expense tracking, income management, budget planning, and detailed financial analytics with interactive charts.</p>
+                    <div class="project-tech">
+                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">Django</span>
+                        <span class="tech-tag">PostgreSQL</span>
+                        <span class="tech-tag">Chart.js</span>
+                        <span class="tech-tag">Bootstrap</span>
+                        <span class="tech-tag">JavaScript</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://github.com/SaugatBhujel/vaultbooks" class="project-btn" target="_blank">
+                            <i class="fab fa-github"></i> View Code
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="certifications">
         <div class="section-content">
             <h2 data-aos="fade-down">Certifications</h2>
+            <!-- IBM Certificate -->
             <div class="cert-card" data-aos="fade-up">
                 <div class="cert-content">
                     <i class="fab fa-ibm cert-icon"></i>
@@ -124,6 +189,37 @@
                         <i class="fas fa-external-link-alt"></i> Verify Certificate
                     </a>
                 </div>
+            </div>
+
+            <!-- New Certificate -->
+            <div class="cert-card" data-aos="fade-up" data-aos-delay="200">
+                <div class="cert-content">
+                    <i class="fab fa-ibm cert-icon"></i>
+                    <h3>Introduction to Artificial Intelligence (AI)</h3>
+                    <p class="cert-issuer">IBM & Coursera</p>
+                    <p class="cert-date">Completed: Jan 5, 2025</p>
+                    <a href="https://coursera.org/verify/KE4UWBV5YJI8" class="verify-btn" target="_blank">
+                        <i class="fas fa-external-link-alt"></i> Verify Certificate
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="experience">
+        <div class="section-content">
+            <h2 data-aos="fade-down">Experience</h2>
+            <div class="timeline">
+                <div class="timeline-item" data-aos="fade-right">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>Position Title</h3>
+                        <h4>Company Name</h4>
+                        <p class="timeline-date">2023 - Present</p>
+                        <p>Description of your role and achievements</p>
+                    </div>
+                </div>
+                <!-- Add more timeline items -->
             </div>
         </div>
     </section>
@@ -192,79 +288,67 @@
     <section id="contact">
         <div class="section-content">
             <h2 data-aos="fade-down">Get In Touch</h2>
-            <div class="contact-info" data-aos="zoom-in" data-aos-delay="200">
-                <a href="mailto:your.actual@email.com" class="contact-link">
-                    <i class="fas fa-envelope"></i>
-                    Email Me
-                </a>
-                <a href="https://linkedin.com/in/saugatbhujel" class="contact-link">
-                    <i class="fab fa-linkedin"></i>
-                    LinkedIn
-                </a>
-            </div>
-        </div>
-    </section>
-
-    <section id="projects">
-        <div class="section-content">
-            <h2 data-aos="fade-down">Projects</h2>
-            <div class="projects-grid">
-                <div class="project-card" data-aos="fade-up">
-                    <div class="project-image">
-                        <img src="images/project1.jpg" alt="Project 1">
+            <p class="section-subtitle" data-aos="fade-up">Let's collaborate on your next project</p>
+            
+            <div class="contact-container">
+                <div class="contact-info" data-aos="fade-right">
+                    <div class="contact-info-header">
+                        <h3>Contact Information</h3>
+                        <p>Feel free to reach out through any of these platforms</p>
                     </div>
-                    <div class="project-content">
-                        <h3>Project Name</h3>
-                        <p>Description of your amazing project</p>
-                        <div class="project-tech">
-                            <span>HTML</span>
-                            <span>CSS</span>
-                            <span>JavaScript</span>
+                    <div class="contact-details">
+                        <div class="contact-item">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <div>
+                                <h4>Location</h4>
+                                <p>Boston, Massachusetts</p>
+                            </div>
                         </div>
-                        <div class="project-links">
-                            <a href="#" target="_blank"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i> Live</a>
+                        <div class="contact-item">
+                            <i class="fas fa-envelope"></i>
+                            <div>
+                                <h4>Email</h4>
+                                <p>saugatbhujel@gmail.com</p>
+                            </div>
+                        </div>
+                        <div class="contact-item">
+                            <i class="fab fa-linkedin"></i>
+                            <div>
+                                <h4>LinkedIn</h4>
+                                <a href="https://linkedin.com/in/saugatbhujel" target="_blank">@saugatbhujel</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <!-- Add more project cards -->
-            </div>
-        </div>
-    </section>
 
-    <section id="experience">
-        <div class="section-content">
-            <h2 data-aos="fade-down">Experience</h2>
-            <div class="timeline">
-                <div class="timeline-item" data-aos="fade-right">
-                    <div class="timeline-dot"></div>
-                    <div class="timeline-content">
-                        <h3>Position Title</h3>
-                        <h4>Company Name</h4>
-                        <p class="timeline-date">2023 - Present</p>
-                        <p>Description of your role and achievements</p>
+                <form class="contact-form" data-aos="fade-left">
+                    <div class="form-header">
+                        <h3>Send Message</h3>
+                        <p>I'll get back to you as soon as possible</p>
                     </div>
-                </div>
-                <!-- Add more timeline items -->
-            </div>
-        </div>
-    </section>
-
-    <section id="blog">
-        <div class="section-content">
-            <h2 data-aos="fade-down">Latest Articles</h2>
-            <div class="blog-grid">
-                <article class="blog-card" data-aos="fade-up">
-                    <div class="blog-image">
-                        <img src="images/blog1.jpg" alt="Blog Post">
+                    <div class="form-group">
+                        <div class="input-group">
+                            <i class="fas fa-user"></i>
+                            <input type="text" name="name" placeholder="Your Name" required>
+                        </div>
                     </div>
-                    <div class="blog-content">
-                        <h3>Article Title</h3>
-                        <p>Brief description of the article...</p>
-                        <a href="#" class="read-more">Read More</a>
+                    <div class="form-group">
+                        <div class="input-group">
+                            <i class="fas fa-envelope"></i>
+                            <input type="email" name="email" placeholder="Your Email" required>
+                        </div>
                     </div>
-                </article>
-                <!-- Add more blog cards -->
+                    <div class="form-group">
+                        <div class="input-group">
+                            <i class="fas fa-pen"></i>
+                            <textarea name="message" placeholder="Your Message" required></textarea>
+                        </div>
+                    </div>
+                    <button type="submit" class="send-btn">
+                        <span>Send Message</span>
+                        <i class="fas fa-paper-plane"></i>
+                    </button>
+                </form>
             </div>
         </div>
     </section>
@@ -276,11 +360,7 @@
     <script>
         AOS.init({
             duration: 800,
-            easing: 'ease-out',
-            once: true,
-            offset: 50,
-            delay: 0,
-            disable: 'mobile'
+            once: true
         });
     </script>
 
@@ -313,18 +393,5 @@
             galleryItems.forEach(item => item.classList.add('show'));
         });
     </script>
-
-    <form class="contact-form" data-aos="fade-up">
-        <div class="form-group">
-            <input type="text" placeholder="Your Name" required>
-        </div>
-        <div class="form-group">
-            <input type="email" placeholder="Your Email" required>
-        </div>
-        <div class="form-group">
-            <textarea placeholder="Your Message" required></textarea>
-        </div>
-        <button type="submit" class="submit-btn">Send Message</button>
-    </form>
 </body>
 </html> 
