Update portfolio with new content and certificates

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <span class="name">Saugat</span><br>
                     <span class="name">Bhujel</span>
                 </h1>
-                <p class="subtitle">Software Engineer & Developer</p>
+                <p class="subtitle">Passionate CS Student & Tech Enthusiast</p>
                 <div class="social-links">
                     <a href="https://github.com/saugatbhujel" target="_blank">
                         <i class="fab fa-github"></i>
@@ -210,16 +210,19 @@
         <div class="section-content">
             <h2 data-aos="fade-down">Experience</h2>
             <div class="timeline">
-                <div class="timeline-item" data-aos="fade-right">
-                    <div class="timeline-dot"></div>
+                <div class="timeline-item" data-aos="fade-up">
                     <div class="timeline-content">
-                        <h3>Position Title</h3>
-                        <h4>Company Name</h4>
-                        <p class="timeline-date">2023 - Present</p>
-                        <p>Description of your role and achievements</p>
+                        <div class="timeline-image">
+                            <img src="images/certificates/Saugat Bhujel_page-0001.jpg" alt="Bulls & Bear Business Solution Internship Certificate" loading="lazy">
+                        </div>
+                        <div class="timeline-details">
+                            <h3>Junior IT Intern - Data Management and Analysis</h3>
+                            <h4>BULLS & BEAR BUSINESS SOLUTION PVT. LTD.</h4>
+                            <p class="timeline-date">July 20, 2024 - December 27, 2024</p>
+                            <p>Specialized in data management and Excel-based analysis, focusing on data cleaning, validation, and reporting. Collaborated with team members to optimize workflows and deliver actionable insights.</p>
+                        </div>
                     </div>
                 </div>
-                <!-- Add more timeline items -->
             </div>
         </div>
     </section>
@@ -297,13 +300,6 @@
                         <p>Feel free to reach out through any of these platforms</p>
                     </div>
                     <div class="contact-details">
-                        <div class="contact-item">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <div>
-                                <h4>Location</h4>
-                                <p>Boston, Massachusetts</p>
-                            </div>
-                        </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
                             <div>
