Update index.html with latest changes

--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@
                         <a href="https://github.com/SaugatBhujel/vaultbooks" class="project-btn" target="_blank">
                             <i class="fab fa-github"></i> View Code
                         </a>
+                        <a href="https://vaultbookssoftware.vercel.app" class="project-btn" target="_blank">
+                            <i class="fas fa-external-link-alt"></i> Live Demo
+                        </a>
                     </div>
                 </div>
             </div>
